--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- CONTENU DE GAUCHE -->
         <section class="left">
-            <img src="/assets/billie.jpg" alt="photo billie eilish">
+            <img src="assets/billie.jpg" alt="photo billie eilish">
         </section>
         <!-- CONTENU DE DROITE -->
         <section class="right">
